@@ -1,3 +1,7 @@
+2004-12-07 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/VBox_VisualDisk.cc: placed a small (2px) border around the legend.
+
 2004-12-08  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* configure.in: Added Russian to ALL_LINGUAS.
